--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,156 @@
-langchain
-langchain-openai
-python-dotenv
+absl-py==2.1.0
+apt-clone==0.2.1
+apturl==0.5.2
+argcomplete==3.1.4
+asgiref==3.7.2
+astunparse==1.6.3
+Babel==2.10.3
+beautifulsoup4==4.12.3
+blinker==1.7.0
+Brlapi==0.8.5
+Brotli==1.1.0
+certifi==2023.11.17
+chardet==5.2.0
+click==8.1.6
+colorama==0.4.6
+command-not-found==0.3
+configobj==5.0.8
+crudini==0.9.4
+cryptography==41.0.7
+cssselect==1.2.0
+cupshelpers==1.0
+dbus-python==1.3.2
+defer==1.0.6
+deprecation==2.0.7
+distro==1.9.0
+distro-info==1.7+build1
+eyed3==0.9.7
+feedparser==6.0.10
+filelock==3.13.1
+filetype==1.2.0
+Flask==3.0.2
+flatbuffers==24.3.25
+freetype-py==2.4.0
+gast==0.6.0
+google-pasta==0.2.0
+grpcio==1.51.1
+gunicorn==20.1.0
+gyp==0.1
+h5py==3.12.1
+html2text==2024.2.26
+html5lib==1.1
+httplib2==0.20.4
+idna==3.6
+ifaddr==0.2.0
+IMDbPY==2021.4.18
+importlib-metadata==4.12.0
+iniparse==0.5
+itsdangerous==2.1.2
+jaraco.classes==3.2.1
+jeepney==0.8.0
+Jinja2==3.1.2
+joblib==1.4.2
+keras==3.6.0
+keyring==24.3.1
+launchpadlib==1.11.0
+lazr.restfulclient==0.14.6
+lazr.uri==1.0.6
+libclang==18.1.1
+libevdev==0.5
+louis==3.29.0
+lxml==5.2.1
+macaroonbakery==1.3.4
+Mako==1.3.2.dev0
+Markdown==3.7
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+mdurl==0.1.2
+ml-dtypes==0.4.1
+more-itertools==10.2.0
+mutagen==1.46.0
+namex==0.0.8
+netaddr==0.8.0
+netifaces==0.11.0
+numpy==2.1.1
+oauthlib==3.2.2
+opt_einsum==3.4.0
+optree==0.13.0
+packaging==24.0
+PAM==0.4.2
+pexpect==4.9.0
+pillow==10.2.0
+pipx==1.4.3
+platformdirs==4.2.0
+protobuf==4.21.12
+psutil==5.9.8
+ptyprocess==0.7.0
+pyasyncore==1.0.2
+pycairo==1.25.1
+pycryptodomex==3.20.0
+pycups==2.0.1
+pycurl==7.45.3
+pyelftools==0.30
+Pygments==2.17.2
+PyGObject==3.48.2
+PyICU==2.12
+pyinotify==0.9.6
+PyJWT==2.7.0
+pymacaroons==0.13.0
+PyNaCl==1.5.0
+pyOpenSSL==23.2.0
+pyparsing==3.1.1
+pyparted==3.12.0
+pypng==0.20231004.0
+pyRFC3339==1.1
+python-apt==2.7.7+ubuntu3
+python-debian==0.1.49+ubuntu2
+python-gnupg==0.5.2
+python-magic==0.4.27
+python-xlib==0.33
+pytz==2024.1
+pyudev==0.24.0
+pyxdg==0.28
+PyYAML==6.0.1
+qrcode==7.4.2
+repolib==2.2.1
+reportlab==4.1.0
+requests==2.31.0
+requests-file==1.5.1
+rich==13.7.1
+rlPyCairo==0.3.0
+scikit-learn==1.5.1
+scipy==1.14.1
+SecretStorage==3.3.3
+setproctitle==1.3.3
+setuptools==68.1.2
+sgmllib3k==1.0.0
+simplejson==3.19.2
+six==1.16.0
+soupsieve==2.5
+systemd-python==235
+tensorboard==2.17.1
+tensorboard-data-server==0.7.2
+tensorflow==2.17.0
+termcolor==2.5.0
+threadpoolctl==3.5.0
+tinycss2==1.2.1
+tldextract==3.1.2
+trash-cli==0.23.11.10
+typing_extensions==4.10.0
+ubuntu-drivers-common==0.0.0
+ubuntu-pro-client==8001
+ufw==0.36.2
+Unidecode==1.3.8
+urllib3==2.0.7
+userpath==1.9.1
+wadllib==1.3.6
+webencodings==0.5.1
+websockets==10.4
+Werkzeug==3.0.1
+wheel==0.42.0
+wrapt==1.16.0
+xdg==5
+xkit==0.0.0
+xlrd==2.0.1
+yt-dlp==2024.4.9
+zipp==1.0.0
