--- a/requirements.txt
+++ b/requirements.txt
@@ -1,48 +1,38 @@
-fastapi
-uvicorn
-langchain-nvidia-ai-endpoints==0.3.7
+fastapi==0.115.6
+uvicorn==0.34.0
 langchain-mistralai==0.2.4
-## The following requirements were added by pip freeze:
-aiofiles==24.1.0
-aiohttp==3.9.5
+chromadb==0.5.23
+langchain-chroma==0.1.4
+python-dotenv==1.0.1
+huggingface-hub==0.27.0
+langchain-huggingface==0.1.2
+langchain-community==0.3.13
+easyocr==1.7.2
+tokenizers==0.20.3
+transformers==4.46.3
+langserve==0.3.1
+httpx==0.28.1
+aiohappyeyeballs==2.4.4
+aiohttp==3.11.11
 aiosignal==1.3.2
 annotated-types==0.7.0
 anyio==4.7.0
 asgiref==3.8.1
-asttokens==3.0.0
 attrs==24.3.0
 backoff==2.2.1
 bcrypt==4.2.1
-beautifulsoup4==4.12.3
 build==1.2.2.post1
 cachetools==5.5.0
 certifi==2024.12.14
-cffi==1.17.1
-chardet==5.2.0
-charset-normalizer==3.4.0
+charset-normalizer==3.4.1
 chroma-hnswlib==0.7.6
-chromadb==0.5.23
-click==8.1.7
+click==8.1.8
 coloredlogs==15.0.1
-comm==0.2.2
-contourpy==1.3.1
-cryptography==44.0.0
-cycler==0.12.1
 dataclasses-json==0.6.7
-debugpy==1.8.11
-decorator==5.1.1
 Deprecated==1.2.15
-distro==1.9.0
-docx2txt==0.8
 durationpy==0.9
-easyocr==1.7.2
-emoji==2.14.0
-eval_type_backport==0.2.0
-executing==2.1.0
 filelock==3.16.1
-filetype==1.2.0
-flatbuffers==24.3.25
-fonttools==4.55.3
+flatbuffers==24.12.23
 frozenlist==1.5.0
 fsspec==2024.12.0
 google-auth==2.37.0
@@ -50,56 +40,35 @@ googleapis-common-protos==1.66.0
 greenlet==3.1.1
 grpcio==1.68.1
 h11==0.14.0
-html5lib==1.1
 httpcore==1.0.7
 httptools==0.6.4
-httpx==0.28.1
 httpx-sse==0.4.0
-huggingface-hub==0.27.0
 humanfriendly==10.0
 idna==3.10
 imageio==2.36.1
 importlib_metadata==8.5.0
 importlib_resources==6.4.5
-ipykernel==6.29.5
-ipython==8.31.0
-jedi==0.19.2
 Jinja2==3.1.5
-jiter==0.8.2
 joblib==1.4.2
 jsonpatch==1.33
-jsonpath-python==1.0.6
 jsonpointer==3.0.0
-jupyter_client==8.6.3
-jupyter_core==5.7.2
-kiwisolver==1.4.8
 kubernetes==31.0.0
-langchain-chroma==0.1.4
-langchain-community==0.3.13
+langchain==0.3.13
 langchain-core==0.3.28
-langchain-huggingface==0.1.2
-langchain-pinecone==0.2.0
 langchain-text-splitters==0.3.4
-langchainhub==0.1.21
-langdetect==1.0.9
-langsmith==0.2.4
+langsmith==0.2.6
 lazy_loader==0.4
-lxml==5.3.0
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 marshmallow==3.23.2
-matplotlib==3.10.0
-matplotlib-inline==0.1.7
 mdurl==0.1.2
 mmh3==5.0.1
 monotonic==1.6
 mpmath==1.3.0
 multidict==6.1.0
 mypy-extensions==1.0.0
-nest-asyncio==1.6.0
 networkx==3.4.2
 ninja==1.11.1.3
-nltk==3.9.1
 numpy==1.26.4
 nvidia-cublas-cu12==12.4.5.8
 nvidia-cuda-cupti-cu12==12.4.127
@@ -114,9 +83,7 @@ nvidia-nccl-cu12==2.21.5
 nvidia-nvjitlink-cu12==12.4.127
 nvidia-nvtx-cu12==12.4.127
 oauthlib==3.2.2
-olefile==0.47
 onnxruntime==1.20.1
-openai==1.58.1
 opencv-python-headless==4.10.0.84
 opentelemetry-api==1.29.0
 opentelemetry-exporter-otlp-proto-common==1.29.0
@@ -131,39 +98,22 @@ opentelemetry-util-http==0.50b0
 orjson==3.10.12
 overrides==7.7.0
 packaging==24.2
-parso==0.8.4
-pexpect==4.9.0
-pinecone-client==5.0.1
-pinecone-plugin-inference==1.1.0
-pinecone-plugin-interface==0.0.7
-platformdirs==4.3.6
+pillow==11.0.0
 posthog==3.7.4
-prompt_toolkit==3.0.48
 propcache==0.2.1
 protobuf==5.29.2
-psutil==6.1.1
-ptyprocess==0.7.0
-pure_eval==0.2.3
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
 pyclipper==1.3.0.post6
-pycparser==2.22
-pydantic==2.9.2
+pydantic==2.10.4
 pydantic-settings==2.7.0
-pydantic_core==2.23.4
+pydantic_core==2.27.2
 Pygments==2.18.0
-pyparsing==3.2.0
-pypdf==5.1.0
 PyPika==0.48.9
 pyproject_hooks==1.2.0
 python-bidi==0.6.3
 python-dateutil==2.9.0.post0
-python-iso639==2024.10.22
-python-magic==0.4.27
-python-oxmsg==0.0.1
 PyYAML==6.0.2
-pyzmq==26.2.0
-RapidFuzz==3.11.0
 regex==2024.11.6
 requests==2.32.3
 requests-oauthlib==2.0.0
@@ -180,38 +130,24 @@ shapely==2.0.6
 shellingham==1.5.4
 six==1.17.0
 sniffio==1.3.1
-soupsieve==2.6
 SQLAlchemy==2.0.36
-stack-data==0.6.3
 starlette==0.41.3
 sympy==1.13.1
 tenacity==9.0.0
 threadpoolctl==3.5.0
 tifffile==2024.12.12
-tiktoken==0.8.0
-tokenizers==0.20.3
 torch==2.5.1
-torchaudio==2.5.1
 torchvision==0.20.1
-tornado==6.4.2
 tqdm==4.67.1
-traitlets==5.14.3
-transformers==4.46.3
 triton==3.1.0
 typer==0.15.1
-types-requests==2.32.0.20241016
 typing-inspect==0.9.0
 typing_extensions==4.12.2
-unstructured==0.16.11
-unstructured-client==0.28.1
-urllib3==2.2.3
+urllib3==2.3.0
 uvloop==0.21.0
 watchfiles==1.0.3
-wcwidth==0.2.13
-webencodings==0.5.1
 websocket-client==1.8.0
 websockets==14.1
-wikipedia==1.4.0
 wrapt==1.17.0
 yarl==1.18.3
 zipp==3.21.0
