--- a/requirements.txt
+++ b/requirements.txt
@@ -1,143 +1,6 @@
 fastapi==0.115.6
 uvicorn==0.34.0
 langchain-mistralai==0.2.4
-chromadb==0.5.23
-langchain-chroma==0.1.4
-python-dotenv==1.0.1
-huggingface-hub==0.27.0
-ollama
-aiohappyeyeballs==2.4.4
-aiohttp==3.11.11
-aiosignal==1.3.2
-annotated-types==0.7.0
-anyio==4.8.0
-asgiref==3.8.1
-attrs==24.3.0
-backoff==2.2.1
-bcrypt==4.2.1
-build==1.2.2.post1
-cachetools==5.5.1
-certifi==2024.12.14
-charset-normalizer==3.4.1
-chroma-hnswlib==0.7.6
-click==8.1.8
-coloredlogs==15.0.1
-Deprecated==1.2.15
-durationpy==0.9
-easyocr==1.7.2
-filelock==3.17.0
-flatbuffers==25.1.21
-frozenlist==1.5.0
-fsspec==2024.12.0
-google-auth==2.38.0
-googleapis-common-protos==1.66.0
-greenlet==3.1.1
-grpcio==1.70.0
-h11==0.14.0
-httpcore==1.0.7
-httptools==0.6.4
-httpx==0.28.1
-httpx-sse==0.4.0
-humanfriendly==10.0
-idna==3.10
-imageio==2.37.0
-importlib_metadata==8.5.0
-importlib_resources==6.5.2
-Jinja2==3.1.5
-jsonpatch==1.33
-jsonpointer==3.0.0
-kubernetes==32.0.0
-langchain==0.3.15
-langchain-core==0.3.31
-langchain-text-splitters==0.3.5
-langserve==0.3.1
-langsmith==0.3.1
-lazy_loader==0.4
-markdown-it-py==3.0.0
-MarkupSafe==3.0.2
-mdurl==0.1.2
-mmh3==5.0.1
-monotonic==1.6
-mpmath==1.3.0
-multidict==6.1.0
-networkx==3.4.2
-ninja==1.11.1.3
-numpy==1.26.4
-nvidia-cublas-cu12==12.4.5.8
-nvidia-cuda-cupti-cu12==12.4.127
-nvidia-cuda-nvrtc-cu12==12.4.127
-nvidia-cuda-runtime-cu12==12.4.127
-nvidia-cudnn-cu12==9.1.0.70
-nvidia-cufft-cu12==11.2.1.3
-nvidia-curand-cu12==10.3.5.147
-nvidia-cusolver-cu12==11.6.1.9
-nvidia-cusparse-cu12==12.3.1.170
-nvidia-nccl-cu12==2.21.5
-nvidia-nvjitlink-cu12==12.4.127
-nvidia-nvtx-cu12==12.4.127
-oauthlib==3.2.2
-onnxruntime==1.20.1
-opencv-python-headless==4.11.0.86
-opentelemetry-api==1.29.0
-opentelemetry-exporter-otlp-proto-common==1.29.0
-opentelemetry-exporter-otlp-proto-grpc==1.29.0
-opentelemetry-instrumentation==0.50b0
-opentelemetry-instrumentation-asgi==0.50b0
-opentelemetry-instrumentation-fastapi==0.50b0
-opentelemetry-proto==1.29.0
-opentelemetry-sdk==1.29.0
-opentelemetry-semantic-conventions==0.50b0
-opentelemetry-util-http==0.50b0
-orjson==3.10.15
-overrides==7.7.0
-packaging==24.2
-pillow==11.1.0
-posthog==3.9.3
-propcache==0.2.1
-protobuf==5.29.3
-pyasn1==0.6.1
-pyasn1_modules==0.4.1
-pyclipper==1.3.0.post6
-pydantic==2.10.6
-pydantic_core==2.27.2
-Pygments==2.19.1
-PyPika==0.48.9
-pyproject_hooks==1.2.0
-python-bidi==0.6.3
-python-dateutil==2.9.0.post0
-python-multipart==0.0.20
-PyYAML==6.0.2
-requests==2.32.3
-requests-oauthlib==2.0.0
-requests-toolbelt==1.0.0
-rich==13.9.4
-rsa==4.9
-scikit-image==0.25.0
-scipy==1.15.1
-setuptools==75.8.0
-shapely==2.0.6
-shellingham==1.5.4
-six==1.17.0
-sniffio==1.3.1
-SQLAlchemy==2.0.37
-sse-starlette==2.2.1
-starlette==0.41.3
-sympy==1.13.1
-tenacity==9.0.0
-tifffile==2025.1.10
-tokenizers==0.20.3
-torch==2.5.1
-torchvision==0.20.1
-tqdm==4.67.1
-triton==3.1.0
-typer==0.15.1
-typing_extensions==4.12.2
-urllib3==2.3.0
-uvloop==0.21.0
-watchfiles==1.0.4
-websocket-client==1.8.0
-websockets==14.2
-wrapt==1.17.2
-yarl==1.18.3
-zipp==3.21.0
-zstandard==0.23.0
+groq
+python-dotenv
+langchain
